--- a/mobile/src/main/res/layout/contador_movil.xml
+++ b/mobile/src/main/res/layout/contador_movil.xml
@@ -1,36 +1,31 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:keepScreenOn="true">
+    <TextView
+        android:id="@+id/hora"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="00:00"
+        android:textSize="16dp"
+        android:fontFamily="sans-serif-thin"
+        android:visibility="gone"/>
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fondo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/hora"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="sans-serif-thin"
-                android:gravity="center"
-                android:text="00:00"
-                android:textSize="8sp"
-                android:visibility="gone"/>
-        </LinearLayout>
-
-        <LinearLayout
             android:id="@+id/suEquipo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:orientation="horizontal" >
 
             <com.example.comun.AutoScaleTextView
                 android:id="@+id/susPuntos"
@@ -45,7 +40,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical" >
 
                 <com.example.comun.AutoScaleTextView
                     android:id="@+id/susJuegos"
@@ -66,13 +61,12 @@
                     android:textSize="1000dp" />
             </LinearLayout>
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/miEquipo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:orientation="horizontal" >
 
             <com.example.comun.AutoScaleTextView
                 android:id="@+id/misPuntos"
@@ -87,7 +81,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical" >
 
                 <com.example.comun.AutoScaleTextView
                     android:id="@+id/misJuegos"
@@ -109,10 +103,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-
-    <android.support.wearable.view.DismissOverlayView
-        android:id="@+id/dismiss_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</FrameLayout>
+    </FrameLayout>
