--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -4,4 +4,6 @@
 
     <item android:id="@+id/accion_contador" android:title="Partida" android:orderInCategory="1" app:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/accion_fotografia" android:title="Tomar Fotografia" android:orderInCategory="2" app:showAsAction="ifRoom"/>
+
 </menu>
