--- a/mobile/src/main/res/layout/content_main2.xml
+++ b/mobile/src/main/res/layout/content_main2.xml
@@ -5,7 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Main2Activity"
+    tools:context=".MainActivity"
     tools:showIn="@layout/activity_main2">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/boton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Crear Notificación" />
+
+
+        <Button
+            android:id="@+id/boton_voz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notificación con respuesta" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Respuesta por voz:"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/textViewRespuesta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="..."
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <Button
+            android:id="@+id/boton_broadcast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notificación con respuesta" />
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
